@@ -16,6 +16,7 @@ import uk.gov.hmcts.reform.preapi.entities.AppAccess;
 import uk.gov.hmcts.reform.preapi.entities.Audit;
 import uk.gov.hmcts.reform.preapi.entities.Case;
 import uk.gov.hmcts.reform.preapi.entities.Recording;
+import uk.gov.hmcts.reform.preapi.entities.ShareBooking;
 import uk.gov.hmcts.reform.preapi.enums.AuditLogSource;
 import uk.gov.hmcts.reform.preapi.enums.RecordingStatus;
 import uk.gov.hmcts.reform.preapi.exception.NotFoundException;
@@ -71,7 +72,7 @@ public class ReportService {
             .countRecordingsPerCase()
             .stream()
             .map(data -> new RecordingsPerCaseReportDTO((Case) data[0], ((Long) data[1]).intValue()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -79,8 +80,8 @@ public class ReportService {
         return recordingRepository
             .findAllByParentRecordingIsNotNull()
             .stream()
+            .sorted(Comparator.comparing(Recording::getCreatedAt))
             .map(EditReportDTO::new)
-            .sorted(Comparator.comparing(EditReportDTO::getCreatedAt))
             .collect(Collectors.toList());
     }
 
@@ -94,8 +95,8 @@ public class ReportService {
         return shareBookingRepository
             .searchAll(courtId, bookingId, sharedWithId, sharedWithEmail)
             .stream()
+            .sorted(Comparator.comparing(ShareBooking::getCreatedAt))
             .map(SharedReportDTO::new)
-            .sorted(Comparator.comparing(SharedReportDTO::getSharedAt))
             .collect(Collectors.toList());
     }
 
@@ -116,7 +117,7 @@ public class ReportService {
                 .findAllAccessAttempts()
                 .stream()
                 .map(this::toPlaybackReport)
-                .collect(Collectors.toList());
+                .toList();
         } else if (source == AuditLogSource.PORTAL || source == AuditLogSource.APPLICATION) {
             final var activityPlay = "Play";
             final var functionalAreaVideoPlayer = "Video Player";
@@ -132,7 +133,7 @@ public class ReportService {
                 )
                 .stream()
                 .map(this::toPlaybackReport)
-                .collect(Collectors.toList());
+                .toList();
         } else {
             throw new NotFoundException("Report for playback source: " + source);
         }
@@ -143,8 +144,8 @@ public class ReportService {
         return recordingRepository
             .findAllByParentRecordingIsNull()
             .stream()
+            .sorted(Comparator.comparing(r -> r.getCaptureSession().getBooking().getScheduledFor()))
             .map(CompletedCaptureSessionReportDTO::new)
-            .sorted(Comparator.comparing(CompletedCaptureSessionReportDTO::getScheduledFor))
             .collect(Collectors.toList());
     }
 
@@ -153,8 +154,8 @@ public class ReportService {
         return shareBookingRepository
             .findAllByDeletedAtIsNotNull()
             .stream()
+            .sorted(Comparator.comparing(ShareBooking::getDeletedAt))
             .map(AccessRemovedReportDTO::new)
-            .sorted(Comparator.comparing(AccessRemovedReportDTO::getRemovedAt))
             .collect(Collectors.toList());
     }
 
@@ -165,7 +166,7 @@ public class ReportService {
             .stream()
             .map(this::getParticipantsForRecording)
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<RecordingParticipantsReportDTO> getParticipantsForRecording(Recording recording) {
@@ -175,10 +176,21 @@ public class ReportService {
             .getParticipants()
             .stream()
             .map(participant -> new RecordingParticipantsReportDTO(participant, recording))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private PlaybackReportDTO toPlaybackReport(Audit audit) {
+        // S28-3604 discovered audit details records Recording Id as recordingId _and_ recordinguid
+        var auditDetails = audit.getAuditDetails() != null && !audit.getAuditDetails().isNull();
+        UUID recordingId = null;
+        if (auditDetails) {
+            if (audit.getAuditDetails().hasNonNull("recordingId")) {
+                recordingId = UUID.fromString(audit.getAuditDetails().get("recordingId").asText());
+            } else if (audit.getAuditDetails().hasNonNull("recordinguid")) {
+                recordingId = UUID.fromString(audit.getAuditDetails().get("recordinguid").asText());
+            }
+        }
+
         return new PlaybackReportDTO(
             audit,
             audit.getCreatedBy() != null
@@ -188,10 +200,8 @@ public class ReportService {
                             .map(AppAccess::getUser)
                             .orElse(null))
                 : null,
-            audit.getAuditDetails() != null && audit.getAuditDetails().hasNonNull("recordingId")
-                ? recordingRepository
-                .findById(UUID.fromString(audit.getAuditDetails().get("recordingId").asText()))
-                .orElse(null)
+            recordingId != null
+                ? recordingRepository.findById(recordingId).orElse(null)
                 : null
         );
     }
